@@ -47,6 +47,7 @@ import org.chromium.ui.base.WindowAndroid;
 
 import java.lang.ref.WeakReference;
 import java.util.Arrays;
+import java.util.List;
 
 /** Unit tests for {@link TabModelImpl}. */
 @RunWith(BaseRobolectricTestRunner.class)
@@ -88,7 +89,7 @@ public class TabModelImplUnitTest {
 
     @Before
     public void setUp() {
-        // Disable HomepageManager#shouldCloseAppWithZeroTabs() for TabModelImpl#closeAllTabs().
+        // Disable HomepageManager#shouldCloseAppWithZeroTabs() for TabModelImpl#closeTabs().
         HomepageManager.getInstance().setPrefHomepageEnabled(false);
 
         when(mIncognitoProfile.isOffTheRecord()).thenReturn(true);
@@ -308,8 +309,10 @@ public class TabModelImplUnitTest {
 
         selectTab(activeIncognito, incognitoTab0);
 
-        activeIncognito.closeMultipleTabs(
-                Arrays.asList(new Tab[] {incognitoTab0, incognitoTab1}), false);
+        activeIncognito.closeTabs(
+                TabClosureParams.closeTabs(List.of(incognitoTab0, incognitoTab1))
+                        .allowUndo(false)
+                        .build());
         verify(mTabModelSelector, never()).selectModel(anyBoolean());
         assertEquals(incognitoTab2, activeIncognito.getTabAt(activeIncognito.index()));
     }
@@ -387,7 +390,7 @@ public class TabModelImplUnitTest {
         Tab tab1 = createTab(tabModel);
         assertEquals(tab1, tabModel.getTabById(tab1.getId()));
 
-        tabModel.closeTab(tab1, /* uponExit= */ false, /* canUndo= */ true);
+        tabModel.closeTabs(TabClosureParams.closeTab(tab1).build());
         assertEquals(null, tabModel.getTabById(tab1.getId()));
 
         tabModel.cancelTabClosure(tab1.getId());
@@ -444,10 +447,10 @@ public class TabModelImplUnitTest {
 
         tabModel.closeTabsNavigatedInTimeWindow(20, 50);
         verify(mTabGroupModelFilter)
-                .closeMultipleTabs(
-                        Arrays.asList(tab2, tab3),
-                        /* canUndo= */ false,
-                        /* hideTabGroups= */ false,
-                        /* canRestore= */ false);
+                .closeTabs(
+                        TabClosureParams.closeTabs(Arrays.asList(tab2, tab3))
+                                .allowUndo(false)
+                                .saveToTabRestoreService(false)
+                                .build());
     }
 }
